# RPGGame

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  texturemanager.cpp  texturemanager.hpp
src/components/: CMakeLists.txt  guicomponent.hpp  renderingcomponent.hpp  spritecomponent.hpp  transformcomponent.hpp
src/state/: CMakeLists.txt  mainmenustate.cpp  mainmenustate.hpp  statebase.hpp  statemachine.hpp
